--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@prettier/plugin-php": "^0.21.0",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
         "prettier": "^3.0.3",
+        "sass": "^1.56.1",
         "vite": "^4.0.0"
     }
 }
